<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/PageLayout">

        <TextView android:text="@string/goldcoinCalc" android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/txtHeader"
            android:layout_weight="1"
            android:textAlignment="center"
            android:theme="@style/HeaderAppear" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinMaterial"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Spinner"
            android:theme="@style/Spinner"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculate"
            android:id="@+id/btnCalculate"
            android:layout_weight="0.25" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editAmount"
            android:layout_weight=".25" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PriceDisplay"
            android:id="@+id/displayPrice"
            android:layout_weight="1.5" />
    </LinearLayout>

</LinearLayout>